OnboardingV2Minimal/force-app/main/default/objects/Communication_Template_Assignment__c/Communication_Template_Assignment__c.object-meta.xml
<CustomObject>
    <description>Maps communication templates to vendor programs so one template can be reused across multiple programs.</description>
    <label>Communication Template Assignment</label>
    <nameField>
        <displayFormat>CTA-{000000}</displayFormat>
        <label>Communication Template Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Template Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>