OnboardingV2Minimal/force-app/main/default/objects/Communication_Template_Assignment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, this communication template assignment is eligible for dispatch.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>