OnboardingV2Minimal/force-app/main/default/objects/Communication_Template_Assignment__c/fields/Communication_Template__c.field-meta.xml
<CustomField>
    <fullName>Communication_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Communication template to use for this assignment.</description>
    <label>Communication Template</label>
    <referenceTo>Communication_Template__c</referenceTo>
    <relationshipName>Communication_Template_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>