OnboardingV2Minimal/force-app/main/default/objects/Communication_Template_Assignment__c/fields/Communication_Template_Label__c.field-meta.xml
<CustomField>
    <fullName>Communication_Template_Label__c</fullName>
    <formula>Communication_Template__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Communication Template Label</label>
    <type>Text</type>
</CustomField>