OnboardingV2Minimal/force-app/main/default/objects/Communication_Template_Assignment__c/fields/Vendor_Program__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vendor program that should receive this communication template.</description>
    <label>Vendor Program</label>
    <referenceTo>Vendor_Customization__c</referenceTo>
    <relationshipName>Communication_Template_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>