OnboardingV2Minimal/force-app/main/default/objects/Communication_Template_Assignment__c/fields/Vendor_Program_Label__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Label__c</fullName>
    <formula>Vendor_Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor Program Label</label>
    <type>Text</type>
</CustomField>